--- a/问题集合.md
+++ b/问题集合.md
@@ -1,3 +1,9 @@
- - [x] vue各个版本区别 runtime compiler等
- - [x] sharedPropertyDefinition实验与原理
- - [x] 建立debuger仓库, 一步一步实现
+all:
+  vue各个版本区别 runtime compiler等
+  
+now:
+  Vue构建函数主线
+
+next:
+  Observe实现
+  merge实现
